<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Melon</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="home_nav_header_desc">Navigation header</string>
    <string name="home_toolbar_nav_button_desc">Open Drawer</string>

    <string name="home_nav_drawer_menu_profile">Profile</string>
    <string name="home_nav_drawer_menu_events">Events</string>
    <string name="home_nav_drawer_menu_bookmarks">Bookmarks</string>
    <string name="home_nav_drawer_menu_messages">Messages</string>
    <string name="home_nav_drawer_menu_settings">Settings</string>
    <string name="home_nav_drawer_menu_registration">Create a new account</string>
    <string name="home_nav_drawer_menu_login">Add an existing account</string>

    <string name="home_tab_recommend">For You</string>
    <string name="home_tab_following">Follow</string>
    <string name="home_tab_nearby">Nearby</string>

    <string name="home_bottom_menu_posts">Posts</string>
    <string name="home_bottom_menu_nearby">Nearby</string>
    <string name="home_bottom_menu_anonymous">Anonymous</string>

    <string name="app_common_follow">Follow</string>
    <string name="app_common_following">Following</string>
    <string name="app_common_follower">Followers</string>
    <string name="app_common_search">Search</string>
    <string name="app_common_hometown">Hometown</string>
    <string name="app_common_username">Username</string>
    <string name="app_common_school">School</string>
    <string name="app_common_college">College</string>
    <string name="app_common_degree">Degree</string>
    <string name="app_common_major">Major</string>
    <string name="app_common_not_set">Not set</string>
    <string name="app_common_go_back">Back</string>
    <string name="app_common_save">Save</string>

    <string name="app_common_avatar_desc">Avatar</string>
    <string name="app_common_more_operation_desc">More operation</string>
    <string name="app_common_search_desc">Search</string>
    <string name="app_common_interest_group_desc">Interest Group</string>
    <string name="app_common_save_desc">Save</string>
    <string name="app_common_go_back_desc">Back</string>

    <string name="app_common_error_hint">Something went wrong</string>
    <string name="app_common_retry_hint">TRY AGAIN</string>
    <string name="app_common_error_timeout_hint">Connection Timeout</string>
    <string name="app_common_error_unknown_hint">Unknown Error</string>

    <string name="app_common_sorry">Sorry</string>

    <string name="empty_list_title">List is empty</string>
    <string name="empty_list_subtitile">Some hint</string>
</resources>