<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/home_nav_drawer_group_operations"
        android:checkableBehavior="single"
        android:visible="true">
        <item
            android:id="@+id/home_nav_drawer_nav_to_profile"
            android:icon="@drawable/ic_round_person_outline_24"
            android:title="@string/home_nav_drawer_menu_profile" />
        <item
            android:id="@+id/home_nav_drawer_nav_to_events"
            android:icon="@drawable/ic_round_star_outline_24"
            android:title="@string/home_nav_drawer_menu_events" />
        <item
            android:id="@+id/home_nav_drawer_nav_to_collections"
            android:icon="@drawable/ic_round_bookmark_border_24"
            android:title="@string/home_nav_drawer_menu_bookmarks" />
        <item
            android:id="@+id/home_nav_drawer_nav_to_messages"
            android:icon="@drawable/ic_round_chat_bubble_outline_24"
            android:title="@string/home_nav_drawer_menu_messages" />
    </group>

    <group
        android:id="@+id/home_nav_drawer_group_setting"
        android:checkableBehavior="single"
        android:visible="true">
        <item
            android:id="@+id/home_nav_drawer_nav_to_settings"
            android:icon="@drawable/ic_round_settings_24"
            android:title="@string/home_nav_drawer_menu_settings" />
    </group>

    <group
        android:id="@+id/home_nav_drawer_group_account"
        android:checkableBehavior="single"
        android:visible="false">
        <item
            android:id="@+id/home_nav_drawer_nav_to_registration"
            android:title="@string/home_nav_drawer_menu_registration" />

        <item
            android:id="@+id/home_nav_drawer_nav_to_login"
            android:title="@string/home_nav_drawer_menu_login" />
    </group>
</menu>